# EmployeeListingManager

./: CMakeLists.txt
Bindings/Python/: client.py  requests.py
EmployeeListingManager/: CMakeLists.txt  EmployeeListing.c  EmployeeListing.h  EmployeeListingCollection.c  EmployeeListingCollection.h  EmployeeListingFormatters.c  EmployeeListingFormatters.h  EmployeeListingManager.c  EmployeeListingManager.h  main.c
EmployeeListingManager/Network/: Receive.c  Receive.h  Send.c  Send.h
EmployeeListingManager/Protocol/: Requests.h  Responses.h
Tests/: CMakeLists.txt  EmployeeListingCollectionTests.c  EmployeeListingTests.c
